# include_dir

./: .gitignore  .travis.yml  Cargo.toml  README.md  aliases.js  appveyor.yml  crates.js  help.html  index.html  integration_tests.py  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: main.yml
ci/: before_deploy.sh  deploy.sh  install.sh  script.sh
error_chain/: index.html  macro.bail.html  macro.ensure.html  macro.error_chain.html  macro.quick_main.html  struct.Backtrace.html  struct.DisplayChain.html  struct.Iter.html  trait.ChainedError.html  trait.ExitCode.html
error_chain/example_generated/: enum.ErrorKind.html  struct.Error.html  trait.ResultExt.html  type.Result.html
error_chain/example_generated/inner/: enum.ErrorKind.html  struct.Error.html  trait.ResultExt.html  type.Result.html
examples/: example_build.rs  generate_example.rs  typical_build.rs
failure/: struct.Causes.html
glob/: all.html  fn.glob.html  fn.glob_with.html  index.html  struct.GlobError.html  struct.MatchOptions.html  struct.Paths.html  struct.Pattern.html  struct.PatternError.html  type.GlobResult.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  (+1 more)
implementors/error_chain/: trait.ChainedError.js
include_dir/: Cargo.toml  all.html  enum.DirEntry.html  fn.include_dir.html  include_dir.m.html  include_dir.v.html  index.html  macro.include_dir.html  sidebar-items.js  struct.Dir.html  struct.File.html  struct.IncludeDirBuilder.html  struct.Metadata.html
include_dir/dir/: Dir.t.html  struct.Dir.html
include_dir/errors/: enum.ErrorKind.html  index.html  struct.Error.html  trait.ResultExt.html  type.Result.html
include_dir/examples/: example.rs
include_dir/file/: struct.File.html
include_dir/frontend/: IncludeDirBuilder.t.html  fn.include_dir.html  struct.IncludeDirBuilder.html
include_dir/generated_example/: INCLUDE_DIR_SRC.v.html  index.html  sidebar-items.js  static.INCLUDE_DIR_SRC.html
include_dir/metadata/: struct.Metadata.html
include_dir/src/: dir.rs  dir_entry.rs  direntry.rs  file.rs  fs.rs  generated_example.rs  globs.rs  lib.rs  metadata.rs
include_dir/tests/: integration_test.rs
include_dir_core/: Cargo.toml
include_dir_core/src/: dir.rs  lib.rs
include_dir_impl/: Cargo.toml  all.html  fn.include_dir_impl.html  include_dir_impl.v.html  index.html  sidebar-items.js
include_dir_impl/src/: dir.rs  direntry.rs  file.rs  lib.rs  utils.rs
include_dir_macros/: all.html  index.html  macro.include_dir.html  sidebar-items.js
integration_tests/: basic_file_access.rs  can_access_files.rs  find_file.rs  globs.rs  walk.rs
macros/: Cargo.toml
macros/src/: lib.rs
proc_macro2/: all.html  enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
proc_macro2/extra/: index.html  struct.DelimSpan.html
proc_macro2/token_stream/: index.html  struct.IntoIter.html
proc_macro_hack/: all.html  index.html  macro.proc_macro_expr_decl.html  macro.proc_macro_expr_impl.html  macro.proc_macro_item_decl!.html  macro.proc_macro_item_decl.html  macro.proc_macro_item_impl.html  proc_macro_expr_decl.m.html  proc_macro_expr_impl.m.html  proc_macro_item_impl.m.html  sidebar-items.js
proc_macro_hack_impl/: all.html  fn.hack_expr.html  fn.hack_item.html  hack_expr.v.html  hack_item.v.html  index.html  sidebar-items.js
quote/: all.html  index.html  macro.format_ident.html  macro.quote.html  macro.quote_spanned.html  trait.IdentFragment.html  trait.ToTokens.html  trait.TokenStreamExt.html
search.desc/include_dir/: include_dir-desc-0-.js
search.desc/include_dir_macros/: include_dir_macros-desc-0-.js
src/: dirs.rs  files.rs  frontend.rs  generated_example.rs  helpers.rs  lib.rs  serialized_globs_definitions.rs  serialized_std_definitions.rs  serializer.rs
src/error_chain/: error_chain.rs.html  example_generated.rs.html  impl_error_chain_kind.rs.html  lib.rs.html  quick_main.rs.html
src/failure/: compat.rs.html  context.rs.html  error.rs.html  error_message.rs.html  lib.rs.html  macros.rs.html  result_ext.rs.html  sync_failure.rs.html
src/failure_derive/: lib.rs.html
src/glob/: lib.rs.html
src/include_dir/: dir.rs.html  dir_entry.rs.html  dirs.rs.html  file.rs.html  files.rs.html  frontend.rs.html  generated_example.rs.html  globs.rs.html  helpers.rs.html  lib.rs.html  metadata.rs.html  serializer.rs.html
src/include_dir_impl/: dir.rs.html  file.rs.html  lib.rs.html
src/include_dir_macros/: lib.rs.html
src/proc_macro2/: detection.rs.html  extra.rs.html  fallback.rs.html  lib.rs.html  marker.rs.html  parse.rs.html  rcvec.rs.html  stable.rs.html  strnom.rs.html  wrapper.rs.html
src/proc_macro_hack/: lib.rs.html
src/proc_macro_hack_impl/: lib.rs.html
src/quote/: ext.rs.html  format.rs.html  ident.rs.html  ident_fragment.rs.html  lib.rs.html  runtime.rs.html  spanned.rs.html  to_tokens.rs.html  tokens.rs.html
src/syn/: attr.rs.html  buffer.rs.html  constant.rs.html  data.rs.html  derive.rs.html  error.rs.html  escape.rs.html  expr.rs.html  generics.rs.html  ident.rs.html  lib.rs.html  lifetime.rs.html  lit.rs.html  mac.rs.html  macros.rs.html  op.rs.html  parse_quote.rs.html  parsers.rs.html  path.rs.html  punctuated.rs.html  spanned.rs.html  synom.rs.html  token.rs.html  tt.rs.html  ty.rs.html  visit.rs.html
src/synom/: helper.rs.html  lib.rs.html  space.rs.html
src/synstructure/: lib.rs.html  macros.rs.html
src/unicode_ident/: lib.rs.html  tables.rs.html
src/unicode_xid/: lib.rs.html  tables.rs.html
src/winapi/: lib.rs.html  macros.rs.html
syn/: all.html  index.html  struct.Ident.html
syn/parse/: enum.IResult.html
unicode_ident/: all.html  fn.is_xid_continue.html  fn.is_xid_start.html  index.html
unicode_xid/: all.html  constant.UNICODE_VERSION.html  index.html  trait.UnicodeXID.html
(+69 files in other folders)
