[package]
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
categories = ["development-tools", "web-programming", "game-engines"]
description = "The logical evolution of the include_str macro for embedding a directory tree into your binary. "
documentation = "https://docs.rs/include_dir"
keywords = ["include", "embed", "assets"]
license = "MIT"
name = "include_dir"
repository = "https://github.com/Michael-F-Bryan/include_dir"
version = "0.1.5"

[badges]

[badges.appveyor]
branch = "master"
repository = "Michael-F-Bryan/include-dir"
service = "github"

[badges.travis-ci]
branch = "master"
repository = "Michael-F-Bryan/include_dir"

[dependencies]
error-chain = "^0.11.0"
glob = "^0.2.11"

[dev-dependencies]
tempdir = "^0.3.5"
tempfile = "^2.1.6"

[features]
default = []
globs = []
