[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
name = "include_dir"
version = "0.7.0"
description = "Embed the contents of a directory in your binary"
license = "MIT"
readme = "../README.md"
keywords = ["assets", "include", "embed", "dir"]
repository = "https://github.com/Michael-F-Bryan/include_dir"
categories = ["development-tools", "web-programming", "game-engines"]
edition = "2021"
rust-version = "1.56"

[dependencies]
glob = { version = "0.3", optional = true }
include_dir_macros = { version = "^0.7.0", path = "../macros" }

[dev-dependencies]
tempdir = "0.3"

[features]
default = []
nightly = ["include_dir_macros/nightly"]
metadata = ["include_dir_macros/metadata"]

[package.metadata.docs.rs]
all-features = true
