[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
name = "include_dir_impl"
version = "0.6.1-alpha.0"
description = "Implementation crate for include_dir"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Michael-F-Bryan/include_dir"
edition = "2018"

[badges.appveyor]
branch = "master"
repository = "Michael-F-Bryan/include-dir"
service = "github"

[badges.travis-ci]
branch = "master"
repository = "Michael-F-Bryan/include_dir"

[dependencies]
proc-macro-hack = "0.5"
syn = "1"
quote = "1"
anyhow = "1.0"
proc-macro2 = "1"

[lib]
proc-macro = true
