[package]
name = "include_dir_macros"
version = "0.6.3-dev"
description = "The procedural macro used by include_dir"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
repository = "https://github.com/Michael-F-Bryan/include_dir"
license = "MIT"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.32"
quote = "1.0.10"

[features]
nightly = []
